--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,18 @@ dependencies:
     sdk: flutter
   path: ^1.8.3
   sqflite: ^2.3.0
+  image_picker: ^1.0.4
+  image_cropper: ^1.0.0
+  CircleAvatar: ^1.0.0
+  # file_picker: ^5.5.0
+  # photo_manager: ^2.7.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   editable_image: ^2.0.0
   permission_handler: ^11.0.0
+  # kartal: ^3.4.4
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,7 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - database/person.sqlite
-    - images/img/
+    - images/
     
   #   - images/a_dot_ham.jpeg
 
